--- a/app/index.html
+++ b/app/index.html
@@ -6,12 +6,13 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>NChancy v1</title>
+  <title> N-Chancellor </title>
+  <link rel="icon" href="img/chancellor.png">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--PLACE STYLESHEETS HERE-->
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/normalize.css">
+  <link rel="stylesheet" href="assets/css/materialize.css">
   <base href="/">
 </head>
 <body>
@@ -19,13 +20,13 @@
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-  <div class="container">
+  <div>
       <div ng-view></div>
   </div>
 
   <!--VENDOR JS HERE-->
   <script src="assets/js/jquery-3.2.1.min.js"></script>
-  <!--TEMP--><script src="assets/js/bootstrap.min.js"></script>
+  <script src="assets/js/materialize.js"></script>
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
