--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,10 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--PLACE STYLESHEETS HERE-->
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="assets/css/materialize.css">
+  <link rel="stylesheet" href="assets/css/index.css">
   <base href="/">
 </head>
 <body>
