--- a/app/testpage/testpage.html
+++ b/app/testpage/testpage.html
@@ -1,15 +1,18 @@
 <style type="text/css">
-  .cell{
-    height: 100px;
-    width: 100px;
-  }
-  .image{
-  	margin-left: -14px;
-	margin-top: 10px;
-  }
-  .logo{
-  	
-  }
+	.cell{
+		float:left;
+	    position: relative;
+	    overflow:hidden;
+	}
+	.content {
+	    position:absolute;
+	    height: calc(100%/10);
+	    width: calc(100%/10);
+	}
+	.image{
+		height: 300%;
+	    width: 300%;
+	}
 </style>
 
 <div class="cyan lighten-5">
@@ -53,6 +56,7 @@
 		</div>
 	</ul>
 	<!-- END OF SIDENAV -->
+    <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 
     <br/><br/>
 	<div class="row center-align">
