--- a/app/testpage/testpage.html
+++ b/app/testpage/testpage.html
@@ -30,12 +30,13 @@
 			</div>
 		</div>
 
-		<form action="#">
+		<form action="">
 			<div class="file-field input-field">
 				<div class="waves-effect waves-light btn cyan darken-4">
 					<span>File</span>
-					<input type="file">
+					<input type="file" id="files" name="files[]" />
 				</div>
+				<output id="list"></output>
 				<div class="file-path-wrapper">
 					<input class="file-path validate" type="text">
 				</div>
@@ -61,7 +62,10 @@
     <br/><br/>
 	<div class="row center-align">
 		<div class="col s9 offset-s3">
-		<div id="board" class="col s12"></div>
+			<div id="board" class="col s12"></div>
+			<br/><br/>
+			<div class="divider"></div>
+			<div id="solutions" class="col s12"></div>
 		</div>
 	</div> 
 	<br/><br/>
