--- a/app/testpage/testpage.html
+++ b/app/testpage/testpage.html
@@ -13,10 +13,6 @@
 		height: 300%;
 	    width: 300%;
 	}
-	.imageSolution{
-		height: 10%;
-	    width: 10%;
-	}
 </style>
 
 <div class="cyan lighten-5">
@@ -58,6 +54,11 @@
 			<div class="col s12">
 				<a class="waves-effect waves-light btn col s12 cyan darken-4" id='solve'>Solve</a> 
 			</div>
+
+			<div class="col s12">
+				<br/>
+				<a class="waves-effect waves-light btn col s12 cyan darken-4" id='reset'>Reset Board</a> 
+			</div>
 		</div>
 	</ul>
 	<!-- END OF SIDENAV -->
@@ -67,13 +68,14 @@
 	<div class="row center-align">
 		<div class="col s9 offset-s3">
 			<div id="board" class="col s12"></div>
-			<br/><br/>
-			<div class="divider"></div>
-			<div id="solutions" class="col s12 row"></div>
+			<div id="solutions" class="col s12">
+				<br/><div class="divider"></div><br/>
+			</div>
 		</div>
 	</div> 
 	<br/><br/>
 
+	<!-- MODAL FOR INVALID BOARD SIZE -->
 	<div id="invalid" class="modal">
 		<div class="modal-content">
 			<h4>Invalid board size</h4>
@@ -84,6 +86,7 @@
 		</div>
 	</div>
 
+	<!-- MODAL FOR INVALID BOARD INPUT -->
 	<div id="invalidBoard" class="modal">
 		<div class="modal-content">
 			<h4>Invalid board input</h4>
