--- a/app/testpage/testpage.html
+++ b/app/testpage/testpage.html
@@ -57,7 +57,7 @@
 
 			<div class="col s12">
 				<br/>
-				<a class="waves-effect waves-light btn col s12 cyan darken-4" id='reset'>Reset Board</a> 
+				<a class="waves-effect waves-light btn col s12 cyan darken-4" id='reset'>Reset</a> 
 			</div>
 		</div>
 	</ul>
@@ -68,8 +68,9 @@
 	<div class="row center-align">
 		<div class="col s9 offset-s3">
 			<div id="board" class="col s12"></div>
-			<div id="solutions" class="col s12">
+			<div class="col s12">
 				<br/><div class="divider"></div><br/>
+				<ul id="solutions" class="collapsible" data-collapsible="accordion"></ul>
 			</div>
 		</div>
 	</div> 
@@ -91,6 +92,17 @@
 		<div class="modal-content">
 			<h4>Invalid board input</h4>
 			<p>No two chancellors should be on the same row, column, or L-position.</p>
+		</div>
+		<div class="modal-footer">
+			<a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat cyan darken-4 white-text">Close</a>
+		</div>
+	</div>
+
+	<!-- MODAL FOR WINNER -->
+	<div id="winner" class="modal">
+		<div class="modal-content">
+			<h4>Congratulations!</h4>
+			<p>You solved the puzzle.</p>
 		</div>
 		<div class="modal-footer">
 			<a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat cyan darken-4 white-text">Close</a>
