Added checking for solved puzzle in the text file

--- a/app/testpage/testpage.html
+++ b/app/testpage/testpage.html
@@ -108,4 +108,15 @@
 			<a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat cyan darken-4 white-text">Close</a>
 		</div>
 	</div>
+
+	<!-- MODAL IF ONE OF THE PUZZLE IS ALREADY SOLVED -->
+	<div id="solvedTextFile" class="modal">
+		<div class="modal-content">
+			<h4>Solution Found</h4>
+			<p>One of the puzzle in the text file is already solved.</p>
+		</div>
+		<div class="modal-footer">
+			<a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat cyan darken-4 white-text">Close</a>
+		</div>
+	</div>
 </div>
